dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(xmpp_notifier, 0.0.1)

AC_CONFIG_AUX_DIR(build-aux)

AC_CANONICAL_SYSTEM

AM_INIT_AUTOMAKE()

AC_LANG(C++)
AC_PROG_CXX
AC_SUBST([AM_CXXFLAGS], [-std=gnu++0x])

AC_CONFIG_FILES(Makefile src/Makefile t/Makefile)
AC_OUTPUT

